<?xml version="1.0" encoding="utf-8"?>
<ScrollView
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:padding="10dip">
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
   <TextView
      android:id="@+id/about_content"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/about_content" />
   <TextView
      android:id="@+id/func_1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/func1" />
   <TextView
      android:id="@+id/func_2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/func2" />
   <TextView
      android:id="@+id/func_3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/func3" />
   <TextView
      android:id="@+id/func_4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/func4" />
   <TextView
      android:id="@+id/devs"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/devs" />
   <TextView
      android:id="@+id/docs"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/doc" />
   <TextView
      android:id="@+id/misc"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/misc" />
   </LinearLayout>
</ScrollView>